# climatopic-pipeline

./: .gitignore  README.md  play.ipynb  pyproject.toml
.dagster/: dagster.yaml
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/history/runs/: index.db
.dagster/schedules/: schedules.db
dagster_xarray/: __init__.py  dataset.py  metadata.py
notebooks/: chunks.ipynb
src/climatopic/: __init__.py  definitions.py
src/climatopic/climate/climatology/: __init__.py  assets.py
src/climatopic/climate/haduk/: __init__.py  assets.py
src/climatopic/climate/indicators/: __init__.py  assets.py  checks.py
src/climatopic/climate/variables/: __init__.py
src/climatopic/climate/variables/percentile/: __init__.py  assets.py  checks.py
src/climatopic/climate/variables/primary/: assets.py  checks.py
src/climatopic/core/: checks.py  constants.py  dagster_types.py  partitions.py  types.py  utilities.py
src/climatopic/core/asset_factory/: __init__.py  asset_factory.py  asset_template.py
src/climatopic/core/indicators/: __init__.py  indicators.yaml  indices.py  utilities.py
src/climatopic/core/indicators/indices2/: __init__.py
src/climatopic/core/metadata/: __init__.py  format.py  metadata.py
src/climatopic/core/resources/: __init__.py  haduk_io_manager.py  pandas_parquet_io_manager.py  xarray_zarr_io_manager.py
src/climatopic/core/schema/: __init__.py  coords.py  dataset.py
src/climatopic/core/variables/: __init__.py  utilities.py  variable.py  variables.yaml
src/climatopic/core/variables/indices/: __init__.py  _percentile.py  _simple.py
src/climatopic/data/: elements.yaml  parameters.yaml  schema.yml
